--- a/docs/assets/css/main.css
+++ b/docs/assets/css/main.css
@@ -1667,8 +1667,8 @@ th {
 .masthead {
   position: relative;
   border-bottom: 1px solid #bfbfbf;
-  -webkit-animation: intro 0.3s both;
-  animation: intro 0.3s both;
+  -webkit-animation: none;
+  animation: none;
   -webkit-animation-delay: 0.15s;
   animation-delay: 0.15s;
   z-index: 20; }
@@ -1743,8 +1743,8 @@ th {
   padding-left: 2em;
   padding-right: 2em;
   font-family: -apple-system, BlinkMacSystemFont, "Roboto", "Segoe UI", "Helvetica Neue", "Lucida Grande", Arial, sans-serif;
-  -webkit-animation: intro 0.3s both;
-  animation: intro 0.3s both;
+  -webkit-animation: none;
+  animation: none;
   -webkit-animation-delay: 0.3s;
   animation-delay: 0.3s; }
   .breadcrumbs::after {
@@ -2163,8 +2163,8 @@ th {
   /* sticky footer fix end */
   margin-top: 3em;
   color: #000;
-  -webkit-animation: intro 0.3s both;
-  animation: intro 0.3s both;
+  -webkit-animation: none;
+  animation: none;
   -webkit-animation-delay: 0.45s;
   animation-delay: 0.45s;
   background-color: #000; }
@@ -2253,8 +2253,8 @@ th {
     margin-right: auto;
     padding-left: 1em;
     padding-right: 1em;
-    -webkit-animation: intro 0.3s both;
-    animation: intro 0.3s both;
+    -webkit-animation: none;
+    animation: none;
     -webkit-animation-delay: 0.15s;
     animation-delay: 0.15s; }
     @media (min-width: 80em) {
@@ -2950,8 +2950,8 @@ a.reversefootnote {
   margin-right: auto;
   padding-left: 1em;
   padding-right: 1em;
-  -webkit-animation: intro 0.3s both;
-  animation: intro 0.3s both;
+  -webkit-animation: none;
+  animation: none;
   max-width: 100%;
   -webkit-animation-delay: 0.15s;
   animation-delay: 0.15s; }
@@ -3034,8 +3034,8 @@ a.reversefootnote {
   position: relative;
   margin-bottom: 2em;
   clear: both;
-  -webkit-animation: intro 0.3s both;
-  animation: intro 0.3s both;
+  -webkit-animation: none;
+  animation: none;
   -webkit-animation-delay: 0.25s;
   animation-delay: 0.25s; }
   .page__hero::after {
@@ -3050,8 +3050,8 @@ a.reversefootnote {
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
-    -webkit-animation: intro 0.3s both;
-    animation: intro 0.3s both;
+    -webkit-animation: none;
+    animation: none;
     -webkit-animation-delay: 0.25s;
     animation-delay: 0.25s; }
     .page__hero--overlay::after {
